# Career-Buddy

./: .env.example  .gitignore  CLAUDE_COORDINATION.md  README.md  playwright.config.ts  wrangler.jsonc
backend/: README.md  pyproject.toml  setup_supabase.py
backend/career_buddy_scraper/: README_gemini.md  __init__.py  classify.py  claude_cli.py  db.py  descriptions.py  discovery.py  http.py  jd_attrs.py  jobs_repo.py  models.py  orchestrator.py
backend/career_buddy_scraper/ats/: ashby.py  greenhouse.py  lever.py  personio.py  workable.py  workday.py
backend/career_buddy_scraper/cli/: audit_vc_adapters.py  backfill_descriptions.py  classify.py  classify_subcat.py  classify_tier2.py  classify_tier2_claude.py  enrich_jobs.py  layer3_backfill.py  preflight.py  report.py
backend/career_buddy_scraper/news/: google_news_rss.py
backend/seeds/: bryck-2026-05-11.json  dach-eu-supported-ats-2026-05-10.json  workday-tenants-2026-05-11.json
backend/tests/: test_ats_contract.py  test_ats_detect.py  test_classify.py  test_claude_cli.py  test_descriptions.py  test_discovery.py  test_google_news_rss.py  test_http.py  test_jd_attrs.py  test_master_list.py  test_workable_pagination.py  test_workday_adapter.py
data/: mock_emails.json  sample_cv.txt  schema.sql  seed_vc_jobs.sql  vc_jobs.json
docs/: DEMO.md  HANDOFF_2026-05-10_AFTERNOON.md  HANDOFF_2026-05-10_NEW_SESSION.md  HANDOFF_GEMINI_SCRAPER_2026-05-09.md  HANDOFF_NEW_CHAT_2026-05-09.md  HANDOFF_NEW_CHAT_2026-05-10.md  HANDOFF_OVERNIGHT_2026-05-09.md  HANDOFF_SESSION3_CLASSIFY_BACKFILL.md  HANDOFF_SESSION4_RESULTS.md  (+16 more)
(+150 files in other folders)
